# fdmj_compiler

./: Makefile  README.md
src/: CMakeLists.txt  Makefile  main.c
src/docs/: main.tex
src/docs/example/: example_in_report.1.src  example_in_report.2.ast  example_in_report.3.irp  example_in_report.4.stm  example_in_report.5.ins  example_in_report.6.ssa  example_in_report.7.arm  example_in_report.8.s  example_in_report.fmj
src/include/backend/arm/: armgen.h
src/include/backend/llvm/: llvmgen.h
src/include/frontend/: lexer.lex  parser.yacc  translate.h
src/include/utils/dsa/: assemblock.h  env.h  graph.h
src/lib/: CMakeLists.txt
src/lib/backend/arm/: armgen.c  regalloc.c
src/lib/backend/llvm/: llvmgen.c
src/lib/frontend/: CMakeLists.txt  semant.c  translate.c
src/lib/optimizer/: ig.c  ssa.c
src/lib/utils/dsa/: assem.c  assemblock.c  graph.c  temp.c
src/lib/utils/printer/: print_ins.c
test/: basic.1.src  basic.2.ast  basic.3.irp  basic.4.stm  bubblesort.1.src  bubblesort.2.ast  bubblesort.3.irp  bubblesort.4.stm  bubblesort.5.ins  bubblesort.6.ssa  bubblesort.ll  bubblesort.output  example.1.src  example.4.stm  example.5.ins  example.6.ssa  example.fmj  example.output  example01.1.src  example01.2.ast  example01.3.irp  example01.4.stm  example01.5.ins  example01.6.ssa  example01.ll  example02.1.src  example02.2.ast  example02.3.irp  example02.4.stm  example02.5.ins  example02.6.ssa  example03.1.src  example03.2.ast  example03.3.irp  example03.4.stm  example03.5.ins  example03.6.ssa  example03.ll  example04.1.src  example04.2.ast  (+264 more)
(+6 files in other folders)
